--- a/examples/typescript/tsconfig.json
+++ b/examples/typescript/tsconfig.json
@@ -19,5 +19,5 @@
   "paths": {
     "src/*": ["./src/*"]
   },
-  "exclude": ["node_modules", "test", "examples"]
+  "exclude": ["node_modules", "test"]
 }
